--- a/MasterCodeBelal/db/FlappyBird.lpc.html
+++ b/MasterCodeBelal/db/FlappyBird.lpc.html
@@ -16,6 +16,38 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >inst17|altsyncram_component|auto_generated</TD>
+<TD >10</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >inst17</TD>
+<TD >13</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >inst10|altsyncram_component|auto_generated</TD>
 <TD >10</TD>
 <TD >0</TD>
@@ -113,11 +145,11 @@
 </TR>
 <TR >
 <TD >inst14</TD>
-<TD >36</TD>
+<TD >37</TD>
 <TD >0</TD>
+<TD >1</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >24</TD>
+<TD >30</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -277,7 +309,7 @@
 <TD >0</TD>
 <TD >3</TD>
 <TD >0</TD>
-<TD >4</TD>
+<TD >3</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -369,7 +401,7 @@
 </TR>
 <TR >
 <TD >inst8</TD>
-<TD >16</TD>
+<TD >17</TD>
 <TD >0</TD>
 <TD >1</TD>
 <TD >0</TD>
